# ValueSentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PRD Generation for Financial Alerter.md  README.md  alembic.ini  deploy.ps1  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_widen_enum_columns.py  003_add_pushover_channel.py
docs/: deployment-guide.md  user-guide.md
src/valuesentinel/: __init__.py  cli.py  config.py  database.py  health.py  logging_config.py  models.py
src/valuesentinel/alerts/: engine.py
src/valuesentinel/calculator/: valuation.py
src/valuesentinel/dashboard/: app.py
src/valuesentinel/data/: price_provider.py  yfinance_connector.py
src/valuesentinel/notifications/: base.py  discord.py  email_notifier.py  manager.py  pushover.py  telegram.py
src/valuesentinel/scheduler/: jobs.py
tests/: conftest.py  test_alerts.py  test_calculator.py  test_models.py  test_notifications.py
